<resources>
    <string name="app_name">Share Space</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_interested">Quan tâm</string>
    <string name="title_share">Tìm bạn thuê</string>
    <string name="title_appointment">Lịch hẹn</string>
    <string name="title_profile">Cá nhân</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="title_activity_signup">Đăng xuất</string>
    <string name="cannot_connect_to_share_space_server">Không thể kết nối đến máy chủ</string>
    <string name="error_name_please_try_again_later">Lỗi: %1$s.\nVui lòng thử lại sau.</string>
    <string name="please_try_again_later">Vui lòng thử lại sau.</string>
    <string name="cannot_connect_to_share_space_server_ok_button">OK</string>
    <string name="cannot_connect_to_share_space_server_retry_button">Tải lại</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="sign_in_authenticating">Đang xác minh</string>
    <string name="error_invalid_email">Email không đúng định dạng</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn</string>
    <string name="error_incorrect_password">Mật khẩu không chính xác</string>
    <string name="error_field_required">Phần này cần được nhập</string>
    <string name="error_login_failed">Đăng nhập thất bại!\nEmail hoặc mật khẩu không chính xác!</string>
    <string name="signup_link">Chưa có tài khoản? Tạo mới</string>
    <string name="hint_signup_last_name">Họ</string>
    <string name="hint_signup_first_name">Tên</string>
    <string name="hint_signup_email">Email</string>
    <string name="hint_signup_password">Mật khẩu</string>
    <string name="hint_signup_confirm_password">Xác nhận mật khẩu</string>
    <string name="hint_signup_date_of_birth">Ngày/tháng/năm sinh</string>
    <string name="hint_signup_gender">Giới tính</string>
    <string name="hint_signup_gender_male">Nam</string>
    <string name="hint_signup_gender_female">Nữ</string>
    <string name="hint_signup_gender_other">Khác</string>
    <string-array name="hint_signup_gender_array">
        <item>@string/hint_signup_gender_male</item>
        <item>@string/hint_signup_gender_female</item>
        <item>@string/hint_signup_gender_other</item>
    </string-array>
    <string name="hint_signup_phone_number">Điện thoại</string>
    <string name="action_sign_up">Đăng ký</string>
    <string name="creating_account">Đang tạo tài khoản...</string>
    <string name="login_link">Đã có tài khoản? Đăng nhập</string>
    <string name="error_signup_invalid_password">Mật khẩu tối thiểu 8 ký tự</string>
    <string name="error_not_match_password">Mật khẩu xác nhận không trùng mật khẩu</string>
    <string name="error_not_enough_age">Ứng dụng yêu cầu người dùng trên 18 tuổi</string>
    <string name="error_signup_failed">Đăng ký thất bại! Lỗi:\u00a0</string>
    <string name="fragment_housing_list_toolbar_filter_hint">Bộ lọc tìm kiếm</string>
    <string name="fragment_housing_list_toolbar_post_house_hint">Đăng nhà</string>
    <string name="fragment_housing_list_loading">Đang tải</string>
    <string name="housing_recycler_view_adapter_house_location">Q./H.\u00a0</string>
    <string name="housing_recycler_view_adapter_saved">\u00a0Đã lưu</string>
    <string name="housing_recycler_view_adapter_history_housing_section">Nhà của bạn</string>
    <string name="housing_recycler_view_adapter_history_housing_section_show_more">Xem thêm</string>
    <string name="housing_recycler_view_adapter_housing_section">Tin mới</string>
    <string name="fragment_search_result_housing_toolbar_title">Kết quả</string>
    <string name="fragment_search_housing_input_data_toolbar_title">Tìm kiếm</string>
    <string name="fragment_search_housing_input_data_location_section">Địa điểm</string>
    <string name="fragment_search_housing_input_data_radius_section">Bán kính (%1$d km)</string>
    <string name="fragment_search_housing_input_data_keyword_section">Từ khóa</string>
    <string name="fragment_search_housing_input_data_keyword_input_hint_section">Tiêu đề, mô tả nhà,&#8230;</string>
    <string name="fragment_search_housing_input_data_house_type_section">Loại nhà</string>
    <string name="fragment_search_housing_input_data_house_type_option_dialog_title">Chọn loại nhà</string>
    <string name="fragment_search_housing_input_data_house_type_option_dialog_positive">Xong</string>
    <string name="fragment_search_housing_input_data_house_type_option_dialog_negative">Hủy</string>
    <string name="fragment_search_housing_input_data_house_type_any">Bất kỳ</string>
    <string name="fragment_search_housing_input_data_house_type_apartment">@string/activity_post_house_detailed_item_house_type_apartment</string>
    <string name="fragment_search_housing_input_data_house_type_private_house">@string/activity_post_house_detailed_item_house_type_private_house</string>
    <string name="fragment_search_housing_input_data_house_type_street_front_house">@string/activity_post_house_detailed_item_house_type_street_front_house</string>
    <string name="fragment_search_housing_input_data_house_type_private_room">@string/activity_post_house_detailed_item_house_type_private_room</string>
    <string-array name="fragment_search_housing_input_data_house_type_array">
        <item>@string/fragment_search_housing_input_data_house_type_any</item>
        <item>@string/fragment_search_housing_input_data_house_type_apartment</item>
        <item>@string/fragment_search_housing_input_data_house_type_private_house</item>
        <item>@string/fragment_search_housing_input_data_house_type_street_front_house</item>
        <item>@string/fragment_search_housing_input_data_house_type_private_room</item>
    </string-array>
    <string name="fragment_search_housing_input_data_price_section">Giá</string>
    <string name="fragment_search_housing_input_data_price_any">Bất kỳ</string>
    <string name="fragment_search_housing_input_data_price_deal">Thỏa thuận</string>
    <string name="fragment_search_housing_input_data_price_500000">500 nghìn</string>
    <string name="fragment_search_housing_input_data_price_1000000">1 triệu</string>
    <string name="fragment_search_housing_input_data_price_3000000">3 triệu</string>
    <string name="fragment_search_housing_input_data_price_5000000">5 triệu</string>
    <string name="fragment_search_housing_input_data_price_10000000">10 triệu</string>
    <string name="fragment_search_housing_input_data_price_40000000">40 triệu</string>
    <string-array name="fragment_search_housing_input_data_price_array">
        <item>@string/fragment_search_housing_input_data_price_any</item>
        <item>@string/fragment_search_housing_input_data_price_deal</item>
        <item>@string/fragment_search_housing_input_data_price_500000</item>
        <item>@string/fragment_search_housing_input_data_price_1000000</item>
        <item>@string/fragment_search_housing_input_data_price_3000000</item>
        <item>@string/fragment_search_housing_input_data_price_5000000</item>
        <item>@string/fragment_search_housing_input_data_price_10000000</item>
        <item>@string/fragment_search_housing_input_data_price_40000000</item>
    </string-array>
    <string name="fragment_search_housing_input_data_em_dash_between_spinners">&#8212;</string>
    <string name="fragment_search_housing_input_data_area_section">Diện tích</string>
    <string name="fragment_search_housing_input_data_area_any">Bất kỳ</string>
    <string name="fragment_search_housing_input_data_area_30">30 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_50">50 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_80">80 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_100">100 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_150">150 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_200">200 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_250">250 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_300">300 m<small><sup>2</sup></small></string>
    <string name="fragment_search_housing_input_data_area_500">500 m<small><sup>2</sup></small></string>
    <string-array name="fragment_search_housing_input_data_area_array">
        <item>@string/fragment_search_housing_input_data_area_any</item>
        <item>@string/fragment_search_housing_input_data_area_30</item>
        <item>@string/fragment_search_housing_input_data_area_50</item>
        <item>@string/fragment_search_housing_input_data_area_80</item>
        <item>@string/fragment_search_housing_input_data_area_100</item>
        <item>@string/fragment_search_housing_input_data_area_150</item>
        <item>@string/fragment_search_housing_input_data_area_200</item>
        <item>@string/fragment_search_housing_input_data_area_250</item>
        <item>@string/fragment_search_housing_input_data_area_300</item>
        <item>@string/fragment_search_housing_input_data_area_500</item>
    </string-array>
    <string name="fragment_search_housing_input_data_num_people_section">Số người</string>
    <string name="fragment_search_housing_input_data_num_room_section">Số phòng</string>
    <string name="fragment_search_housing_input_data_num_bed_section">Số giường</string>
    <string name="fragment_search_housing_input_data_num_bath_section">Số WC</string>
    <string name="fragment_search_housing_input_data_number_picker_any">Bất kỳ</string>
    <string name="fragment_search_housing_input_data_number_picker_1_plus">1+</string>
    <string name="fragment_search_housing_input_data_number_picker_2_plus">2+</string>
    <string name="fragment_search_housing_input_data_number_picker_3_plus">3+</string>
    <string name="fragment_search_housing_input_data_number_picker_4_plus">4+</string>
    <string name="fragment_search_housing_input_data_number_picker_5_plus">5+</string>
    <string name="fragment_search_housing_input_data_amenities_section">Tiện nghi</string>
    <string name="fragment_search_housing_input_data_amenities_option_dialog_title">Chọn tiện nghi</string>
    <string name="fragment_search_housing_input_data_amenities_option_dialog_positive">Xong</string>
    <string name="fragment_search_housing_input_data_amenities_option_dialog_negative">Hủy</string>
    <string name="fragment_search_housing_input_data_amenities_any">Bất kỳ</string>
    <string name="fragment_search_housing_input_data_amenities_allow_pet">@string/activity_post_house_allow_pet</string>
    <string name="fragment_search_housing_input_data_amenities_has_wifi">@string/activity_post_house_has_wifi</string>
    <string name="fragment_search_housing_input_data_amenities_has_ac">@string/activity_post_house_has_ac</string>
    <string name="fragment_search_housing_input_data_amenities_has_parking">@string/activity_post_house_has_parking</string>
    <string-array name="fragment_search_housing_input_data_amenity_array">
        <item>@string/fragment_search_housing_input_data_amenities_any</item>
        <item>@string/fragment_search_housing_input_data_amenities_allow_pet</item>
        <item>@string/fragment_search_housing_input_data_amenities_has_wifi</item>
        <item>@string/fragment_search_housing_input_data_amenities_has_ac</item>
        <item>@string/fragment_search_housing_input_data_amenities_has_parking</item>
    </string-array>
    <string name="activity_show_exist_share_post_of_current_housing_toolbar_title">Các bài đã chia sẻ</string>
    <string name="activity_show_exist_share_post_of_current_housing_toolbar_post_finding_roommate_button">Đăng bài</string>
</resources>