<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_interested"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_interested" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_hand_shake_people"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_appointment" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_picture"
        android:title="@string/title_profile" />
</menu>
