<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/fragment_search_share_housing_input_data_number_picker_1_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginRight="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginEnd="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:paddingTop="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:paddingBottom="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:text="@string/fragment_search_housing_input_data_number_picker_1_plus"
        android:textSize="@dimen/fragment_search_housing_input_data_num_picker_text_size"
        android:textColor="@color/white"
        android:background="@drawable/search_housing_square_option_border_primary_color_background"
        android:tag="1" />

    <TextView
        android:id="@+id/fragment_search_share_housing_input_data_number_picker_2_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginStart="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginRight="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginEnd="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:paddingTop="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:paddingBottom="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:text="@string/fragment_search_housing_input_data_number_picker_2_plus"
        android:textSize="@dimen/fragment_search_housing_input_data_num_picker_text_size"
        android:textColor="@color/textColorSecondary"
        android:background="@drawable/search_housing_square_option_border"
        android:tag="2" />

    <TextView
        android:id="@+id/fragment_search_share_housing_input_data_number_picker_3_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginStart="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginRight="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginEnd="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:paddingTop="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:paddingBottom="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:text="@string/fragment_search_housing_input_data_number_picker_3_plus"
        android:textSize="@dimen/fragment_search_housing_input_data_num_picker_text_size"
        android:textColor="@color/textColorSecondary"
        android:background="@drawable/search_housing_square_option_border"
        android:tag="3" />

    <TextView
        android:id="@+id/fragment_search_share_housing_input_data_number_picker_4_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginStart="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginRight="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginEnd="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:paddingTop="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:paddingBottom="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:text="@string/fragment_search_housing_input_data_number_picker_4_plus"
        android:textSize="@dimen/fragment_search_housing_input_data_num_picker_text_size"
        android:textColor="@color/textColorSecondary"
        android:background="@drawable/search_housing_square_option_border"
        android:tag="4" />

    <TextView
        android:id="@+id/fragment_search_share_housing_input_data_number_picker_5_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:layout_marginStart="@dimen/fragment_search_housing_input_data_num_picker_cell_left_right_margin"
        android:paddingTop="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:paddingBottom="@dimen/fragment_search_housing_input_data_num_picker_text_top_bottom_padding"
        android:text="@string/fragment_search_housing_input_data_number_picker_5_plus"
        android:textSize="@dimen/fragment_search_housing_input_data_num_picker_text_size"
        android:textColor="@color/textColorSecondary"
        android:background="@drawable/search_housing_square_option_border"
        android:tag="5" />

</LinearLayout>