<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lmtri.sharespace.activity.hometab.ShowExistSharePostsOfCurrentHousingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_show_exist_share_posts_of_current_housing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_show_exist_share_post_of_current_housing_toolbar_title"
            android:textColor="@color/white"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <TextView
            android:id="@+id/activity_show_exist_share_posts_of_current_housing_toolbar_post_finding_roommate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:padding="@dimen/activity_show_exist_share_post_of_current_housing_toolbar_done_padding"
            android:text="@string/activity_show_exist_share_post_of_current_housing_toolbar_post_finding_roommate_button"
            android:textColor="@color/white"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/ripple_effect_primary_color"
            android:clickable="true" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_show_exist_share_posts_of_current_housing_share_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_housing_list_left_right_margin"
        android:layout_marginRight="@dimen/fragment_housing_list_left_right_margin"
        android:clipToPadding="false"
        tools:listitem="@layout/fragment_share_housing_item"
        app:layoutManager="LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/activity_show_exist_share_posts_of_current_housing_connection_error_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/activity_show_exist_share_posts_of_current_housing_connection_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cannot_connect_to_share_space_server"
            android:textColor="@color/textColorDisabledHint"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:visibility="invisible" />

        <ViewSwitcher
            android:id="@+id/activity_show_exist_share_posts_of_current_housing_view_switcher_retry_connect_to_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/fragment_housing_list_view_switcher_padding">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <FrameLayout
                android:id="@+id/activity_show_exist_share_posts_of_current_housing_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fragment_housing_list_retry_button_height"
                android:layout_gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/ripple_effect_primary_color"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/fragment_housing_list_retry_button_text_left_right_padding"
                    android:paddingRight="@dimen/fragment_housing_list_retry_button_text_left_right_padding"
                    android:text="@string/cannot_connect_to_share_space_server_retry_button"
                    android:textColor="@color/default_white"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            </FrameLayout>

        </ViewSwitcher>

    </LinearLayout>

</LinearLayout>
